# twitter-clone

./: .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.sh
.github/workflows/: test.yml
apps/core/: admin.py  apps.py  forms.py  tasks.py  urls.py  views.py
apps/core/api/: permissions.py  serializers.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
apps/core/templatetags/: custom_filters.py
config/: celery.py  settings.py  urls.py
templates/: base.html
templates/core/: explore.html  home.html  profile.html  register.html  timeline.html  tweet_card.html  users_list.html
templates/core/emails/: retweet_notification.html
tests/: conftest.py  factories.py  test_e2e.py  test_views.py
twitter_clone/: manage.py
twitter_clone/core/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
twitter_clone/core/migrations/: 0001_initial.py  0002_remove_profile_profile_picture.py  0003_alter_tweet_user.py  0004_alter_follow_created_at_alter_like_created_at_and_more.py
twitter_clone/core/templatetags/: custom_filters.py
twitter_clone/static/css/: main.css
twitter_clone/static/js/: main.js
twitter_clone/templates/: base.html
twitter_clone/templates/core/: edit_profile.html  explore.html  home.html  new_tweet.html  profile.html  register.html  tweet_card.html  tweet_detail.html  users_list.html
twitter_clone/templates/registration/: login.html
twitter_clone/tests/: conftest.py  factories.py  test_views.py
twitter_clone/twitter_clone/: asgi.py  settings.py  urls.py  wsgi.py
