[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "twitter-clone"
version = "0.1.0"
description = "A Twitter clone built with Django"
authors = ["Mitchell Harle <mitch104@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
Django = "5.2"
psycopg2-binary = "^2.9.10"
django-crispy-forms = "2.0"
crispy-bootstrap5 = "0.7"
Pillow = "11.2.1"
python-dotenv = "1.1.0"
django-htmx = "^1.23.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
mypy = "^1.15.0"
django-stubs = "^5.2.0"
pre-commit = "^4.2.0"

[tool.poetry.scripts]
start = "twitter_clone.manage:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["twitter_clone"]

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
python_executable = "python"
mypy_path = [".", "twitter_clone"]

[[tool.mypy.overrides]]
module = [
    "django.*",
    "django_htmx.*",
    "crispy_forms.*",
    "crispy_bootstrap5.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "twitter_clone.twitter_clone.settings"
